# DFEIF

./: .dfabit_cerebras_compile.sh  .dfabit_cerebras_run.sh  .dfabit_sambanova_compile.sh  .dfabit_sambanova_run.sh  .gitignore  CMakeLists.txt
examples/cerebras/: graph.txt
examples/experiments/: phase9.cfg
examples/sambanova/: graph.txt
include/dfabit/adapters/: artifacts.h  backend_adapter.h  backend_registry.h  capabilities.h  register_builtin_adapters.h
include/dfabit/adapters/cerebras/: cerebras_adapter.h  cerebras_workflow.h
include/dfabit/adapters/gpu_mlir/: gpu_mlir_adapter.h
include/dfabit/adapters/sambanova/: sambanova_adapter.h  sambanova_workflow.h
include/dfabit/adapters/shared/: artifact_correlator.h  compile_report_parser.h  runtime_log_parser.h
include/dfabit/analysis/: lightweight_fit.h  overhead_engine.h  report.h  reporting.h  scalability_runner.h
include/dfabit/api/: context.h  instrumentor.h
include/dfabit/cli/: experiment_config.h  experiment_runner.h  runner.h
include/dfabit/core/: error.h  file_utils.h  framework.h  framework_config.h  log.h  run_context.h  session.h  status.h
include/dfabit/hidden_ir/: graph_importer.h  partition_tracker.h  sidecar_loader.h
include/dfabit/metadata/: model_desc.h  op_desc.h  stable_id.h  tensor_desc.h
include/dfabit/mlir/: cost_model.h  manifest_exporter.h  module_instrumentor.h  module_loader.h  semantic_tagger.h
include/dfabit/platform/: process_runner.h
include/dfabit/policy/: filter_spec.h  policy_engine.h  sampling_spec.h
include/dfabit/runtime/: launch_observer.h  runtime_correlation.h
include/dfabit/tools/: register_builtin_tools.h  tool.h  tool_context.h  tool_manager.h  tool_registry.h
include/dfabit/tools/builtin/: dataflow_memory_proxy_tool.h  overhead_profiler_tool.h  portability_report_tool.h  semantic_attribution_tool.h
include/dfabit/trace/: event.h  schema.h  trace_buffer.h  trace_stats.h  tracer.h  writer.h
include/dfabit/usecases/: program_analyzer.h
out_cerebras_phase14/platform/cerebras/: compile.stdout  run.stdout
out_gpu_phase12/: mlir_manifest.json  stage_pre_lowering_original.mlir
python/bindings/pybind/: module.cc
python/dfabit/coral/: program_analysis.py
src/adapters/: backend_adapter.cc  backend_registry.cc  register_builtin_adapters.cc
src/adapters/cerebras/: cerebras_adapter.cc  cerebras_workflow.cc
src/adapters/gpu_mlir/: gpu_mlir_adapter.cc
src/adapters/sambanova/: sambanova_adapter.cc  sambanova_workflow.cc
src/adapters/shared/: artifact_correlator.cc  compile_report_parser.cc  runtime_log_parser.cc
src/analysis/: lightweight_fit.cc  overhead_engine.cc  report_csv.cc  reporting.cc  scalability_runner.cc
src/api/: context.cc
src/cli/: experiment_config.cc  experiment_runner.cc  runner.cc
src/core/: error.cc  file_utils.cc  framework.cc  log.cc  session.cc  status.cc
src/hidden_ir/: graph_importer.cc  partition_tracker.cc  sidecar_loader.cc
src/metadata/: stable_id.cc
src/mlir/: cost_model.cc  manifest_exporter.cc  module_instrumentor.cc  module_loader.cc  semantic_tagger.cc
src/platform/: process_runner.cc
src/policy/: policy_engine.cc
src/runtime/: launch_observer.cc  runtime_correlation.cc
src/tools/: register_builtin_tools.cc  tool_context.cc  tool_manager.cc  tool_registry.cc
src/tools/builtin/: dataflow_memory_proxy_tool.cc  overhead_profiler_tool.cc  portability_report_tool.cc  semantic_attribution_tool.cc
src/trace/: trace_buffer.cc  tracer.cc  writer_jsonl.cc
src/usecases/: program_analyzer.cc
test_out/cerebras/platform/cerebras/: compile.stdout  run.stdout
test_out/gpu/: stage_pre_lowering_instrumented.mlir
test_out/sambanova/platform/sambanova/: compile.stdout  run.stdout
tests/: smoketest.cc
tools/dfabitctl/: main.cc
